[project]
name = "healthchecks-action"
description = "healthchecks ci action"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ name = "Ivan Schaller", email = "ivan@schaller.sh" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/olofvndrhr/healthchecks-action"
History = "https://github.com/olofvndrhr/healthchecks-action/commits/master"
Tracker = "https://github.com/olofvndrhr/healthchecks-action/issues"
Source = "https://github.com/olofvndrhr/healthchecks-action"

###
### envs
###

[tool.hatch.envs.lint]
python = "3.12"
detached = true
dependencies = [
    "mypy==1.10.0",
    "ruff==0.4.8",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --non-interactive --install-types {args:.}"
style = [
    "ruff check --no-fix {args:.}",
    "ruff format --diff {args:.}"
]
fmt = [
    "ruff check --fix {args:.}",
    "ruff format {args:.}",
    "style"
]
all = ["style", "typing"]

###
### ruff
###

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
fix = true
show-fixes = true
respect-gitignore = true
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".nox",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = ["T201", "E501", "D103", "D100", "D102", "PLR2004", "D403", "ISC001", "FBT001", "FBT002", "FBT003"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"__about__.py" = ["D104", "F841"]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-branches = 24
max-returns = 12
max-statements = 100
max-args = 15
allow-magic-value-types = ["str", "bytes", "complex", "float", "int"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

###
### mypy
###

[tool.mypy]
#plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
warn_return_any = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

#[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
